--- a/02. Layout and Fonts/vidpub/package.json
+++ b/02. Layout and Fonts/vidpub/package.json
@@ -20,6 +20,8 @@
     "electron": "^1.4.1"
   },
   "dependencies": {
-    "electron-reload": "^1.1.0"
+    "electron-reload": "^1.1.0",
+    "handlebars": "^4.0.6",
+    "underscore": "^1.8.3"
   }
 }
