--- a/02. Layout and Fonts/vidpub/package.json
+++ b/02. Layout and Fonts/vidpub/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "electron-reload": "^1.1.0",
     "handlebars": "^4.0.6",
+    "jquery": "^3.1.1",
     "underscore": "^1.8.3"
   }
 }
