--- a/02. Layout and Fonts/vidpub/package.json
+++ b/02. Layout and Fonts/vidpub/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "electron-reload": "^1.1.0",
+    "gray-matter": "^2.1.0",
     "jade": "^1.11.0",
     "jquery": "^3.1.1",
+    "showdown": "^1.6.4",
     "underscore": "^1.8.3"
   }
 }
