--- a/02. Layout and Fonts/vidpub/package.json
+++ b/02. Layout and Fonts/vidpub/package.json
@@ -23,7 +23,8 @@
     "electron-reload": "^1.1.0",
     "gray-matter": "^2.1.0",
     "jade": "^1.11.0",
-    "jquery": "^3.1.1",
+    "jquery": "2.2.0",
+    "lunr": "^0.7.2",
     "showdown": "^1.6.4",
     "underscore": "^1.8.3"
   }
