--- a/02. Layout and Fonts/vidpub/package.json
+++ b/02. Layout and Fonts/vidpub/package.json
@@ -1,31 +1,23 @@
 {
-  "name": "electron-quick-start",
+  "name": "vidpub",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Our little app",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron main.js"
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "Rob Conery",
   "devDependencies": {
-    "electron": "^1.4.1"
+    "electron-prebuilt": "^0.36.0"
   },
   "dependencies": {
-    "electron-reload": "^1.1.0",
-    "gray-matter": "^2.1.0",
+    "electron-reload": "^0.2.0",
+    "fs-extra": "^0.26.5",
+    "gray-matter": "^2.0.2",
     "jade": "^1.11.0",
-    "jquery": "2.2.0",
-    "lunr": "^0.7.2",
-    "showdown": "^1.6.4",
+    "jquery": "^2.2.0",
+    "lunr": "^0.6.0",
+    "showdown": "^1.3.0",
     "underscore": "^1.8.3"
   }
 }
